# Pinnacle

./: package.json
.github/workflows/: test.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/pdf/: annotation_reader.rs  annotations.rs  briefing.rs  compare.rs  convert.rs  editor.rs  extractor.rs  forensic_redact.rs  forms.rs  image_to_pdf.rs  merger.rs  metadata.rs  mod.rs  outline.rs  parser.rs  rasterizer.rs  remover.rs  reorder.rs  rotator.rs  sanitize.rs  security_utils.rs  signatures.rs  templates.rs  test_utils.rs  utils.rs  watcher.rs  watermark.rs
src/ui/playwright-report/: index.html
src/ui/src/lib/components/: AnnotatePane.svelte  ExtractPane.svelte  LibraryPane.svelte  PdfViewer.svelte  SignaturePadModal.svelte  SignaturePane.svelte  StatusDisplay.svelte
src/ui/src/lib/state/: db.ts  historyState.svelte.ts  historyState.test.ts  pdfState.svelte.ts  pdfState.test.ts
src/ui/src/routes/: +page.svelte
src/ui/tests/e2e/: annotations.spec.ts  basic.spec.ts  e2e_flows.spec.ts
